<?xml version="1.0"?>
<package>
  <name>aruco_ekf</name>
  <version>0.1.2</version>
  <description>
    Pose estimation based on Aruco 3.0.10.
  </description>
  <maintainer email="liuxiyuan95@gmail.com">Xiyuan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
</package>
